@@ -1,4 +1,10 @@
 2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
+	The default for `browse-kill-ring-occur' is now to remove the
+	regexp that is currently in place, restoring all item in the
+	kill-ring to the display.  Previous regexp are still available in
+	the history ring if needed.
+
+2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
 	Add `browse-kill-ring-toggle-display-style' for toggling the
 	display style.  When entering `browse-kill-ring' mode, the display
 	style will default to the value in
